[package]
name = "ros_tokio_demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal ROS package using tokio to test the bloom cargo Debian template."

[dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "ros_tokio_demo"
path = "src/main.rs"
