<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_tokio_demo</name>
  <version>0.1.0</version>
  <description>A minimal ROS package using tokio to test the bloom cargo Debian template.</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>Apache-2.0</license>

  <depend>libssl-dev</depend>

  <export>
    <build_type>cargo</build_type>
  </export>
</package>
